<resources>
    <string name="app_name">ReminderApp</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="logout_button">Logout</string>
    <string name="logout_underlined"><u>Logout</u></string>
    <string name="edit_button">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="not_registered">Not yet registered?</string>
    <string name="register_textbutton"><u>Create account</u></string>
    <string name="sharedPref">myPref</string>
    <string name="user_key">Username</string>
    <string name="pass_key">Password</string>
    <string name="email_key">Email</string>
    <string name="login_key">LoginStatus</string>
    <string name="current_user_key">CurrentUser</string>
    <string name="current_user_id_key">CurrentUserId</string>
    <string name="title">Reminder message</string>
    <string name="content">Content</string>
    <string name="delete">Delete</string>
</resources>