<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".fragments.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUsernameRegister"
        style="@style/BoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/username"
        app:hintTextAppearance="@style/HintStyle"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageUsername"
        app:layout_constraintTop_toBottomOf="@+id/imageProfilePictureRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPasswordRegister"
        style="@style/BoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        app:hintTextAppearance="@style/HintStyle"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textFieldUsernameRegister"
        app:layout_constraintStart_toStartOf="@+id/textFieldUsernameRegister"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUsernameRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailRegister"
        style="@style/BoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        app:hintTextAppearance="@style/HintStyle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textFieldUsernameRegister"
        app:layout_constraintStart_toStartOf="@+id/textFieldUsernameRegister"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPasswordRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="250dp"
        android:backgroundTint="@color/button"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textFieldEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmailRegister" />

    <ImageView
        android:id="@+id/imageProfilePictureRegister"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:background="@drawable/circle_transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account_circle_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddImage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/button"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_photo"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="@+id/imageProfilePictureRegister"
        app:layout_constraintEnd_toEndOf="@+id/imageProfilePictureRegister"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textFieldUsernameRegister"
        app:layout_constraintBottom_toBottomOf="@+id/textFieldUsernameRegister"
        app:layout_constraintTop_toTopOf="@+id/textFieldUsernameRegister"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageUsername"
        app:layout_constraintBottom_toBottomOf="@+id/textFieldPasswordRegister"
        app:layout_constraintTop_toTopOf="@+id/textFieldPasswordRegister"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@+id/imageUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/textFieldEmailRegister"
        app:layout_constraintTop_toTopOf="@+id/textFieldEmailRegister"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>